fix small layout issues

--- a/css/main.less
+++ b/css/main.less
@@ -200,6 +200,7 @@ html, body {
             background-position: top center;
             position: relative;
             max-height: 100%;
+            overflow: hidden;
 
             .bo, .lo {
                 position: absolute;
@@ -302,7 +303,7 @@ html, body {
                 height: 100%;
                 max-width: 600px;
                 background: @primary-two;
-                z-index: 50;
+                z-index: 120;
 
                 color: @text-accent;
 
